[package]
name = "vault-ssh-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
thiserror = "1.0.30"
anyhow = "1.0.55"
shellexpand = "2.1.0"
clap = { version = "3.1.1", features = ["derive"] }
vaultrs = "0.5.4"
tokio = { version = "1.17.0", features = ["full"] }